--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
   - pip install -q -r requirements.txt
 
 before_script:
-  - psql -c 'create database test_db;' -U postgres
+  - psql -c 'create database test_db;' -U sushant
 
 script:
   - python manage.py test  
