--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ install:
 
 before_script:
   - psql -c 'create database test_db;' -U postgres
+  - psql -c "CREATE USER sushant;" -U postgres
 
 script:
   - python manage.py test  
