--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,7 @@
-asn1crypto==0.24.0
-attrs==17.4.0
-Automat==0.6.0
-certifi==2018.1.18
-cffi==1.11.4
-chardet==3.0.4
-constantly==15.1.0
-cryptography==2.1.4
-cssselect==1.0.3
+dj-database-url==0.5.0
 Django==1.11
-djangorestframework==3.7.7
-enum34==1.1.6
-hyperlink==17.3.1
-idna==2.6
-incremental==17.5.0
-ipaddress==1.0.19
-lxml==4.1.1
-parsel==1.3.1
-psycopg2==2.7.4
-psycopg2-binary==2.7.4
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
-pycparser==2.18
-PyDispatcher==2.0.5
-pygame==1.9.3
-pyOpenSSL==17.5.0
-pytz==2017.3
-queuelib==1.4.2
-requests==2.18.4
-Scrapy==1.5.0
-scrapy-djangoitem==1.1.1
-service-identity==17.0.0
-six==1.11.0
-Twisted==17.9.0
-urllib3==1.22
-w3lib==1.19.0
-zope.interface==4.4.3
+gunicorn==19.9.0
+psycopg2==2.7.5
+psycopg2-binary==2.7.5
+pytz==2018.5
+whitenoise==4.0
